[package]
name = "raydium-cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "raydium"
path = "src/main.rs"

[features]
default = ["mainnet"]
mainnet = ["raydium-library/mainnet"]
devnet = ["raydium-library/devnet"]

[dependencies]
raydium-library = { path = "../libraries" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
anyhow = "1.0.53"
clap = { version = "4.1.8", features = ["derive"] }
