[package]
name = "raydium-library"
version = "0.1.0"
edition = "2018"

[features]
devnet = [
    "raydium-amm-v3/devnet",
    "raydium-cp-swap/devnet",
    "raydium_amm/devnet",
]

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "client",
    "no-entrypoint",
] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "client",
    "no-entrypoint",
] }
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-memo = "4.0.0"
solana-program = "<1.17.0"
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
solana-account-decoder = "<1.17.0"
solana-transaction-status = "<1.17.0"
anyhow = "1.0.53"
rand = "0.7.3"
bytemuck = { version = "1.7.3" }
safe-transmute = "0.11.2"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
bs58 = { version = "0.5.1" }
bincode = { version = "1.3.3" }
arrayref = "0.3.6"
uint = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
toml = "0.8.19"

[lib]
crate-type = ["cdylib", "lib"]
